--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from '../components/Hero.astro';
 import CategoryGrid from '../components/CategoryGrid.astro';
 // import Bestsellers from '../components/Bestsellers.astro'; // Temporarily hidden
 import InstagramFeed from '../components/InstagramFeed.astro';
+import ShareYourMoments from '../components/ShareYourMoments.astro';
 import CustomerFeedback from '../components/CustomerFeedback.astro';
 import OurValues from '../components/OurValues.astro';
 import Newsletter from '../components/Newsletter.astro';
@@ -18,6 +19,7 @@ import Footer from '../components/Footer.astro';
 	<CategoryGrid />
 	<!-- <Bestsellers /> Temporarily hidden -->
 	<InstagramFeed />
+	<ShareYourMoments />
 	<CustomerFeedback />
 	<OurValues />
 	<Newsletter />
